# slv

./: .gitignore  .prettierignore  README.md  agave-build-playbook.yml  bam-client-release-playbook.yml  build-skill-oss.sh  build-skill.sh  deno.json  jito-build-playbook.yml  jito-vars.yml.example  package.json  pnpm-lock.yaml  pr-body.md  richat-build-playbook.yml  tsconfig.json  yellowstone-faithful-release-playbook.yml
.claude/: AGENTS.md
.codex/: AGENTS.md
.github/workflows/: slv-remote-build.yml  tiup-install-check.yml  update-agave-cli.yml  update-bam-client.yml  update-jito-cli.yml  update-richat.yml  update-yellowstone-faithful.yml  update-yellowstone-grpc.yml
ansible/: ansible.cfg  compile-slv.yml  inventory.yml  jito-build-playbook.yml  richat-build-playbook.yml  setup-build-server.yml
api/rpc-gateway/: README.md  deno.json
api/slv-api/: drizzle.config.ts
cli/: deno.json  generateChecksums.ts  uploadExe.ts
cli/lib/: addInventory.ts  addMainnetInventory.ts  addMainnetRPCInventory.ts  checkBoost.ts  doublezero.ts  erpcDnsClient.ts  errToString.ts  extractSpecValue.ts  genOrGetRPCInventory.ts  genOrReadVersions.ts  generateCsr.ts  getApiKeyFromYml.ts  isAbortError.ts  notifyDiscordWebhook.ts  optimizeNode.ts  publicIp.ts  randomHex.ts  runAnsible.ts  runAnsibleLocal.ts  runAnsibleV2.ts  sha256Patch.ts  slvAA.ts  slvCloudMcp.ts  updateInventoryHost.ts  updateMainnetRPCInventory.ts
cli/src/: index.ts  upgrade.ts
cmn/constants/: config.ts  path.ts  rpc.ts  url.ts  version.ts
cmn/lib/: purgeR2Cache.ts
cmn/prompt/: checkSSHConnection.ts  localConnection.ts
cmn/types/: config.ts  metal.ts
cmn/zod/: bot.ts  config.ts  http.ts  jito.ts  rpc.ts
docker/systemd/: Dockerfile
docs/agave-build-playbook/: README.md
frontend-template/solana-dapp/: package.json
frontend-template/web-ssg/: package.json
oss-skills/slv-benchmark/: AGENT.md  SKILL.md
oss-skills/slv-firewall/: SKILL.md  skill.json
oss-skills/slv-grpc-geyser/: AGENT.md  SKILL.md
oss-skills/slv-hermes/: SKILL.md
oss-skills/slv-irq-tuning/: SKILL.md
oss-skills/slv-jetstreamer/: SKILL.md
oss-skills/slv-nftables/: SKILL.md
oss-skills/slv-performance-boost/: SKILL.md
oss-skills/slv-pythnet/: SKILL.md
oss-skills/slv-rpc/: AGENT.md  SKILL.md
oss-skills/slv-rpc-gateway/: SKILL.md
oss-skills/slv-security/: SKILL.md  skill.json
oss-skills/slv-server-procurement/: AGENT.md  SKILL.md
oss-skills/slv-smt-disable/: SKILL.md
oss-skills/slv-validator/: AGENT.md  README.md  SKILL.md
oss-skills/slv-wireguard/: SKILL.md
scripts/: README.md  bench-of1-extended.sh  bench-of1.sh  check-version-sync.ts  create-release.ts  docker-systemd-rm.sh  docker-systemd-up.sh  update-version.ts
scripts/ci/: tiup-install-check.sh
sh/: install
sh/0.10.1/: install
sh/0.10.2/: install
sh/0.11.1/: install
sh/0.11.10/: install
sh/0.11.2/: install
sh/0.11.4/: install
sh/0.11.6/: install
sh/0.13.0/: install
sh/0.13.1/: install
sh/0.13.10/: install
sh/0.13.11/: install
sh/0.13.12/: install
sh/0.13.13/: install
sh/0.13.7/: install
sh/0.13.8/: install
sh/0.13.9/: install
sh/0.9.100/: install
sh/0.9.101/: install
sh/0.9.102/: install
sh/0.9.11/: install
sh/0.9.2/: install
sh/0.9.200/: install
sh/0.9.201/: install
sh/0.9.202/: install
sh/0.9.203/: install
sh/0.9.204/: install
sh/0.9.23/: install
sh/0.9.24/: install
sh/0.9.25/: install
sh/0.9.26/: install
sh/0.9.27/: install
sh/0.9.28/: install
sh/0.9.29/: install
sh/0.9.3/: install
sh/0.9.30/: install
sh/0.9.300/: install
sh/0.9.301/: install
sh/0.9.302/: install
sh/0.9.303/: install
sh/0.9.304/: install
sh/0.9.305/: install
sh/0.9.31/: install
sh/0.9.4/: install
sh/0.9.400/: install
sh/0.9.401/: install
sh/0.9.402/: install
sh/0.9.403/: install
sh/0.9.404/: install
sh/0.9.405/: install
sh/0.9.406/: install
sh/0.9.5/: install
sh/0.9.500/: install
sh/0.9.501/: install
sh/0.9.502/: install
sh/0.9.503/: install
sh/0.9.504/: install
sh/0.9.505/: install
sh/0.9.506/: install
sh/0.9.507/: install
sh/0.9.508/: install
sh/0.9.509/: install
sh/0.9.51/: install
sh/0.9.510/: install
sh/0.9.511/: install
sh/0.9.512/: install
sh/0.9.513/: install
sh/0.9.514/: install
sh/0.9.515/: install
sh/0.9.516/: install
sh/0.9.52/: install
sh/0.9.520/: install
sh/0.9.521/: install
sh/0.9.522/: install
sh/0.9.523/: install
sh/0.9.524/: install
sh/0.9.525/: install
sh/0.9.526/: install
sh/0.9.527/: install
sh/0.9.53/: install
sh/0.9.54/: install
sh/0.9.55/: install
sh/0.9.56/: install
sh/0.9.57/: install
sh/0.9.58/: install
sh/0.9.59/: install
sh/0.9.60/: install
sh/0.9.600/: install
sh/0.9.601/: install
sh/0.9.602/: install
sh/0.9.61/: install
sh/0.9.62/: install
sh/0.9.63/: install
sh/0.9.64/: install
sh/0.9.70/: install
sh/0.9.700/: install
sh/0.9.701/: install
sh/0.9.702/: install
sh/0.9.80/: install
sh/0.9.800/: install
sh/0.9.801/: install
sh/0.9.802/: install
sh/0.9.803/: install
sh/0.9.804/: install
sh/0.9.805/: install
sh/0.9.806/: install
sh/0.9.807/: install
sh/0.9.808/: install
sh/0.9.809/: install
sh/0.9.81/: install
sh/0.9.810/: install
sh/0.9.811/: install
sh/0.9.812/: install
sh/0.9.82/: install
sh/0.9.83/: install
sh/0.9.84/: install
slv-plugins/: Cargo.toml  README.md
slv-plugins/rpc-gateway/: Cargo.toml  README.md  build.rs
slv-plugins/rpc-gateway/proto/: shredstream.proto
slv-plugins/rpc-gateway/src/: clickhouse.rs  dispatch.rs  dispatch_test.rs  jsonrpc.rs  lib.rs  main.rs  of1.rs
slv-plugins/rpc-gateway/src/handlers/: gtfa.rs  jet.rs  mod.rs  transfers.rs
slv-plugins/rpc-gateway/src/ws/: billing.rs  mod.rs  pubsub_forward.rs  slot_source.rs  ws_test.rs  yellowstone_bridge.rs
slv-plugins/slv_gtfa_plugin/: Cargo.toml
slv-plugins/slv_gtfa_plugin/src/: lib.rs  main.rs
slv-plugins/slv_transfers_plugin/: Cargo.toml
slv-plugins/slv_transfers_plugin/src/: lib.rs  main.rs
template/: latest  mainnet.md  testnet.md
(+922 files in other folders)
