[package]
name = "slv-rpc-gateway"
description = "JSON-RPC 2.0 gateway for slv-extended Solana RPC methods + analytics, served from the same workspace as the jetstreamer plugins that emit the backing ClickHouse rows"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "slv-rpc-gateway"
path = "src/main.rs"

[lib]
name = "slv_rpc_gateway"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
hyper.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
regex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
base64.workspace = true
url.workspace = true
futures.workspace = true
parking_lot.workspace = true
