[package]
name = "slv_transfers_plugin"
description = "Jetstreamer plugin that emits per-transfer rows backing the getTransfersByAddress RPC method"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "slv-jetstreamer-transfers"
path = "src/main.rs"

[lib]
name = "slv_transfers_plugin"
path = "src/lib.rs"

[dependencies]
jetstreamer.workspace = true
jetstreamer-firehose.workspace = true
jetstreamer-plugin.workspace = true
clickhouse.workspace = true
dashmap.workspace = true
futures-util.workspace = true
once_cell.workspace = true
serde.workspace = true
ahash.workspace = true
log.workspace = true
tokio.workspace = true
solana-address.workspace = true
solana-message.workspace = true
solana-signature.workspace = true
solana-transaction-status.workspace = true
env_logger.workspace = true
